# toy-parse

./: Cargo.toml  build.rs  readme.md
src/: calculate.rs  main.rs  parse.rs  sentence.rs  token.rs  token_render.rs  translation.rs
src/ui/: Icon.psd  MainWindow.slint
