[package]
name = "toy-parse"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[dependencies]
bigdecimal = "0.3"
once_cell = "1"
slint = "0.2.2"

[build-dependencies]
slint-build = "0.2.2"
